fix: Button can wrap

--- a/src/scss/components/Button.scss
+++ b/src/scss/components/Button.scss
@@ -6,6 +6,7 @@
   font-weight: var(--font-medium);
   font-family: var(--font-display);
   text-align: center;
+  white-space: nowrap;
   border-radius: 9999px;
   overflow: hidden;
   outline: none;
